# Multi-Domain-ZBus-Modules

./: README.md  west.yml
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  sysbuild.cmake
app/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
app/src/: main.c
app/sysbuild/ipc_radio/: prj.conf  prj_bt_rpc.conf
modules/: CMakeLists.txt  Kconfig.module_channels  Kconfig.modules
modules/BLE/: CMakeLists.txt  Kconfig.ble  Kconfig.multidomain_channels  ble.c  ble.h  shared_zbus.h  shared_zbus_defenition.h  shared_zbus_definition.h
modules/ble_nus/: CMakeLists.txt  Kconfig.ble_nus  Kconfig.multidomain  Kconfig.multidomain_channels  Kconfig.sysbuild  ble_nus.c  ble_nus.conf  ble_nus.h  remote_zbus.c  shared_zbus.h  shared_zbus_definition.h
modules/ble_nus/sysbuild/ipc_radio/: Kconfig.ipc_radio
modules/channel_sounding/: CMakeLists.txt  Kconfig.channel_sounding  Kconfig.multidomain  Kconfig.multidomain_channels  Kconfig.sysbuild  channel_sounding.c  channel_sounding.conf  channel_sounding.h  remote_zbus.c  shared_zbus.h  shared_zbus_definition.h  sysbuild_fragment.cmake
modules/channel_sounding/sysbuild/hci_ipc/: Kconfig.hci_ipc
modules/led/: CMakeLists.txt  Kconfig.led  Kconfig.multidomain  Kconfig.multidomain_channels  led.c  led.conf  led.h  mdm_led.c  mdm_led.h  remote_zbus.c  shared_zbus.h  shared_zbus_definition.h
